src/main/java/org/example/design/solid/liskov/bad/Sparrow.java
package org.example.design.solid.liskov.bad;

public class Sparrow extends Bird{
    // It can fly as well
    // It can make sound
}
